--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="br.com.mrocigno.estalagemnerd">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,6 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+
+        <service android:name=".PlayerService"/>
 
         <activity
             android:name=".splash.SplashActivity"
@@ -25,6 +29,11 @@
         <activity
             android:name=".main.MainActivity"
             android:label="@string/title_activity_main"/>
+
+        <activity
+            android:name=".details.DetailsActivity"
+            android:label="Details"/>
+
     </application>
 
 </manifest>
